--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
   <body>
     <!-- Rating state start -->
 <main>
-  <section class="card" role="region" aria-labelledby="feedbackHeading">
+  <section class="card"  aria-labelledby="feedbackHeading">
     <img src="images/icon-star.svg" class="star" alt="Star icon" />
 
-    <h2 id="feedbackHeading">How did we do?</h2>
+    <h1 id="feedbackHeading">How did we do?</h2>
     
     <p>
       Please let us know how we did with your support request. All feedback is
       appreciated to help us improve our offering!
     </p>
 
-    <form id="ratingForm" role="form" aria-label="Rating Feedback">
-      <fieldset class="rating" role="group" aria-label="Rating">
+    <form id="ratingForm" aria-label="Rating Feedback">
+      <fieldset class="rating" aria-label="Rating">
         <input type="radio" id="star5" name="rating" value="5" />
         <label for="star5" class="icon">5</label>
 
